--- a/cell02/ex00/responsive.html
+++ b/cell02/ex00/responsive.html
@@ -8,15 +8,14 @@
 </head>
 
 <body>
-	<div class="cell-container">
-		<div class="first-cell">
+	<table class="cell-container">
+		<td class="first-cell">
 			FIRST CELL
-		</div>
-
-		<div class="second-cell">
-			<p>SECOND CELL</p>
-		</div>
-	</div>
+		</td>
+		<td class="second-cell">
+			SECOND CELL
+		</td>
+	</table>
 </body>
 
 </html>
