--- a/cell01/ex06/responsive.html
+++ b/cell01/ex06/responsive.html
@@ -12,7 +12,7 @@
 			FIRST CELL
 		</td>
 		<td class="second-cell">
-			<p>SECOND CELL</p>
+			SECOND CELL
 		</td>
 	</table>
 </body>
@@ -38,6 +38,7 @@
 		padding: 0.5rem;
 		position: fixed;
 		left: 0%;
+		border-color: white;
 
 		/* this is for text centered */
 		display: flex;
