--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="header">
 		<img class="logo" src="https://www.sncf.com/themes/contrib/sncf_theme/images/logo-sncf.svg?v=745795595">
-		<h1>Bienvenue sur le menu en ligne - SNCF</h1>
+		<h1>Bienvenue sur le menu en ligne - SNCF&#160;</h1>
 	</div>
 
 	<main class="main-section">
