--- a/cell03/ex00/background.html
+++ b/cell03/ex00/background.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>User profile</title>
+	<title>Background color changer</title>
 	<link rel="stylesheet" href="background.css">
 	<script src="script.js"></script>
 </head>
