--- a/cell02/ex02/parallax.html
+++ b/cell02/ex02/parallax.html
@@ -9,21 +9,21 @@
 
 <body>
 	<div class="parallax-1">
-		<div class="msg-block-1">
+		<div class="msg-block">
 			<span class="msg">
 				Hello World!
 			</span>
 		</div>
 	</div>
 	<div class="parallax-middle">
-		<div class="msg-block-1">
+		<div class="msg-block">
 			<span class="msg">
 				Goodbye World!
 			</span>
 		</div>
 	</div>
 	<div class="parallax-2">
-		<div class="msg-block-1">
+		<div class="msg-block">
 			<span class="msg">
 				Hello again!
 			</span>
