--- a/cell03/ex03/index.html
+++ b/cell03/ex03/index.html
@@ -9,24 +9,17 @@
 
 
 <body>
-
 	<h1>My to-do list</h1>
 	<div id="ft_list"></div>
 	<button name="new" onclick="new_task()">New</button>
-
-	<div class="overlay" id="overlay" hidden>
-		<div class="confirm-box">
-			<div onclick="closeConfirmBox()" class="close">&#10006;</div>
-			<h2>Confirmation</h2>
-			<p>Are you sure to delete this task?</p>
-			<button onclick="isConfirm(true)">Yes</button>
-			<button onclick="isConfirm(false)">No</button>
-		</div>
-	</div>
-
 </body>
 
 <style>
+	html,
+	body {
+		height: 100%;
+	}
+
 	body {
 		margin: 0;
 		padding: 0;
@@ -48,6 +41,7 @@
 
 	.task {
 		margin: 10px;
+		padding: 10px;
 		background-color: darksalmon;
 	}
 
