--- a/cell03/ex04/ex03bis/index.html
+++ b/cell03/ex04/ex03bis/index.html
@@ -4,14 +4,16 @@
 <head>
 	<meta charset="utf-8">
 	<title>To do list</title>
-	<script src="todo.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+	<script type="module" src="todo.js"></script>
 </head>
 
 
-<body onload="load_tasks()">
+<body>
 	<h1>My to-do list</h1>
 	<div id="ft_list"></div>
-	<button name="new" onclick="new_task()">New</button>
+	<button name="new" id="new">New</button>
 </body>
 
 <style>
