--- a/rush/index.html
+++ b/rush/index.html
@@ -6,34 +6,94 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Discovery pool rush: CVs</title>
 
-	<!-- Bootstrap shit -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-		crossorigin="anonymous"></script>
-	<!-- / Bootstrap shit -->
+	<!-- Font Awesome -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+	<!-- MDB -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.css" rel="stylesheet" />
+	<!-- MDB -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/5.0.0/mdb.min.js"></script>
+
+	<!-- OUR INCLUDES -->
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="cv.js"></script>
+	<link rel="stylesheet" href="cv.css">
 </head>
 
 <body>
-	<header id="header">
-		Welcome to Saint-Tropez
-	</header>
-
-
-	<div id="preview" hidden>
-		<iframe id="mababou" class="preview-desktop" src="mababou.html" frameborder="0"></iframe>
+	<div id="default_container" class="container default">
+		<div class="overlay">
+			<div class="default_frame">
+				<span class="msg-0">Use navigation to switch between CV parts</span>
+				<div class="cv_links">
+					<span id="gotocv1" class="link">CV Margaux Riant</span>
+					<span id="gotocv2" class="link">CV M'hamed Noé Ababou</span>
+				</div>
+			</div>
+		</div>
 	</div>
 
-	<div id="preview" hidden>
-		<iframe id="mababou" class="preview-desktop" src="mababou.html" frameborder="0"></iframe>
+	<!-- MRIANT -->
+	<div id="mriant_container" class="container">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+			<span id="gotohome1" class="navbar-brand" href="#">HOME</span>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#">intro</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">middle</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">end</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<div id="mriant_content" class="mriant_content">
+			<!-- cv content -->
+			banejour, je m'appelle Margaux
+		</div>
 	</div>
+	<!-- MRIANT -->
+
+
+	<!-- MABABOU -->
+	<div id="mababou_container" class="container">
+		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+			<span id="gotohome2" class="navbar-brand" href="#">HOME</span>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav mr-auto">
+					<li class="nav-item">
+						<a class="nav-link" href="#">intro</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">middle</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">end</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+		<div id="mababou_content" class="mababou_content">
+			<!-- cv content -->
+			banejour, je m'appelle M'hamed
+		</div>
+	</div>
+	<!-- MABABOU -->
 
 </body>
 
