--- a/rush/index.html
+++ b/rush/index.html
@@ -25,6 +25,7 @@
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 	<script src="cv.js"></script>
 	<link rel="stylesheet" href="cv.css">
+	
 </head>
 
 <body>
@@ -98,15 +99,44 @@
 			<div class="blank-nav"></div>
 			<!-- cv content -->
 			<a class="anchor" id="mababou-about"></a>
-			<div class="section about" >
+			<div class="section about">
 				<h1>
-					About
+					About me
 				</h1>
+				<section>
+					<img class="profile-picture"
+						src="https://cdn.intra.42.fr/users/7a53dbbffe5e598c8f64e6c555164ff8/mababou.jpg">
+					<div class="mababou-name">
+						M'hamed Noé Ababou
+					</div>
+					<h2>
+						Multi-purpose developper
+						<br><strong>Software Engineer</strong>
+					</h2>
+					<h3>
+						78 Rue des Nénuphars · 75010 Paris · (+33) 663 123 456
+					</h3>
+					<h4>
+						mababou@student.42.fr
+					</h4>
+				</section>
+
 			</div>
 
 			<a class="anchor" id="mababou-resume"></a>
 			<div class="section resume">
-				What did I do?
+				<h1>
+					Skills and professional experience
+				</h1>
+				<section>
+					<h2>💻 Tech skills</h2>
+					<div class="skill">
+						<img class="lang-logo" src="img/c.png">
+						<div class="container-skill">
+							<div class="skills html">90%</div>
+						</div>
+					</div>
+				</section>
 			</div>
 
 			<a class="anchor" id="mababou-contact"></a>
