Add About for mriant and start of Skills
 Changes to be committed:
	modified:   cv.css
	modified:   index.html

--- a/rush/index.html
+++ b/rush/index.html
@@ -52,10 +52,10 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item nav-item-space">
-						<a class="nav-link" href="#">Link1</a>
+						<a class="nav-link" href="#mriant_about">About</a>
 					</li>
 					<li class="nav-item nav-item-space">
-						<a class="nav-link" href="#">Link2</a>
+						<a class="nav-link" href="#mriant-skills_expe">Skills</a>
 					</li>
 					<li class="nav-item nav-item-space">
 						<a class="nav-link" href="#">Link3</a>
@@ -65,7 +65,57 @@
 		</nav>
 		<div id="mriant_content" class="mriant_content">
 			<!-- cv content -->
-			banejour, je m'appelle Margaux
+			<!-- about -->
+			<a class="anchor" id="mriant-about"></a>
+			<div class="section">
+				<div id="mriant_about" class="mriant_about">
+					<div id="mriant_about_head" class="mriant_about_head">
+						<img src="https://bit.ly/3NhJIQe" alt="photo_mriant">
+						<div alt="mriant_titles" class="mriant_titles">
+							<h1>Margaux Riant</h1>
+							<h2>Developper</h2>
+						</div>
+					</div>
+					<div id="mriant_about_tail" class="mriant_about_tail">
+						<div id="presentation" class="presentation">
+							<h1>About</h1>
+							<p>Hello, I am Margaux Riant. I am passionnate about code. I am skilled in C and currently
+								learning
+								aboout Oriented Object Programming.</p>
+						</div>
+						<div id="infos" class="infos">
+							<div class="infos">Age:</div>
+							<div class="word">32</div>
+							<div class="infos">Email:</div>
+							<div class="word">mriant@student.42.fr</div>
+							<div class="infos">Phone:</div>
+							<div class="word">01 23 45 67 89</div>
+							<div class="infos">Address:</div>
+							<div class="word">26 rue du Labrador, Belgique</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- skills and experience -->
+			<a class="anchor" id="mriant-skills_expe"></a>
+			<div class="section">
+				<div class="mriant_skills_expe">
+					<div class="skills">
+						<h1>Skills</h1>
+						<label for="mriant_html">HTML:</label>
+						<progress id="mriant_html" max="100" value="50"></progress>
+						<label for="mriant_CSS">CSS:</label>
+						<progress id="mriant_CSS" max="100" value="50"></progress>
+						<label for="mriant_C">C:</label>
+						<progress id="mriant_C" max="100" value="95"></progress>
+						<label for="mriant_CPP">CPP:</label>
+						<progress id="mriant_CPP" max="100" value="20"></progress>
+						<label for="mriant_python">Python:</label>
+						<progress id="mriant_python" max="100" value="30"></progress>
+					</div>
+				</div>
+			</div>
+			<!-- cv content -->
 		</div>
 	</div>
 	<!-- MRIANT -->
@@ -98,7 +148,7 @@
 			<div class="blank-nav"></div>
 			<!-- cv content -->
 			<a class="anchor" id="mababou-about"></a>
-			<div class="section about" >
+			<div class="section about">
 				<h1>
 					About
 				</h1>
