--- a/rush/index.html
+++ b/rush/index.html
@@ -146,6 +146,50 @@
 				<a class="anchor" id="mriant_contact"></a>
 				<div class="mriant_contact">
 					<h1>Contact me</h1>
+					<section>
+						<h2>Via the form below 👇</h2>
+						<div class="contact-container">
+							<form action="">
+	
+								<label for="fname">First Name</label>
+								<input type="text" id="fname" name="firstname" placeholder="Your name">
+	
+								<label for="lname">Last Name</label>
+								<input type="text" id="lname" name="lastname" placeholder="Your last name">
+	
+								<label for="country">Country</label>
+								<select id="country" name="country">
+									<option value="France">France</option>
+									<option value="Belgium">Belgium</option>
+									<option value="Germany">Germany</option>
+								</select>
+	
+								<label for="subject">Subject</label>
+								<textarea id="subject" name="subject" placeholder="Write something..."
+									style="height:20%"></textarea>
+	
+								<input type="submit" value="Submit">
+	
+							</form>
+						</div>
+					</section>
+					<section>
+						<h2>Via social networks 🙋</h2>
+						<div class="network-container">
+							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+								<img class="network-logo" src="img/facebook.png">
+							</a>
+							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+								<img class="network-logo" src="img/messenger.png">
+							</a>
+							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+								<img class="network-logo" src="img/discord.png">
+							</a>
+							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+								<img class="network-logo" src="img/linkedin.png">
+							</a>
+						</div>
+					</section>
 				</div>
 			</div>
 			<!-- cv content -->
