Fixed a dooble id and a text overflow

--- a/rush/index.html
+++ b/rush/index.html
@@ -68,8 +68,8 @@
 			<!-- cv content -->
 			<!-- about -->
 			<div class="section">
-				<a class="anchor" id="mriant-about"></a>
-				<div id="mriant_about" class="mriant_about">
+				<a class="anchor" id="mriant_about"></a>
+				<div class="mriant_about">
 					<div id="mriant_about_head" class="mriant_about_head">
 						<img src="https://bit.ly/3NhJIQe" alt="photo_mriant">
 						<div alt="mriant_titles" class="mriant_titles">
@@ -147,7 +147,7 @@
 				<div class="mriant_contact">
 					<h1>Contact me</h1>
 					<section>
-						<h2>Via the form below 👇</h2>
+						<h2>Via the form below</h2>
 						<div class="contact-container">
 							<form action="">
 	
@@ -174,7 +174,7 @@
 						</div>
 					</section>
 					<section>
-						<h2>Via social networks 🙋</h2>
+						<h2>Via social networks</h2>
 						<div class="network-container">
 							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
 								<img class="network-logo" src="img/facebook.png">
