--- a/rush/index.html
+++ b/rush/index.html
@@ -42,6 +42,8 @@
 	</div>
 
 	<!-- MRIANT -->
+
+
 	<div id="mriant_container" class="container">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 			<a id="gotohome1" class="navbar-brand" href="#">HOME</a>
@@ -150,26 +152,26 @@
 						<h2>Via the form below 👇</h2>
 						<div class="contact-container">
 							<form action="">
-	
+
 								<label for="fname">First Name</label>
 								<input type="text" id="fname" name="firstname" placeholder="Your name">
-	
+
 								<label for="lname">Last Name</label>
 								<input type="text" id="lname" name="lastname" placeholder="Your last name">
-	
+
 								<label for="country">Country</label>
 								<select id="country" name="country">
 									<option value="France">France</option>
 									<option value="Belgium">Belgium</option>
 									<option value="Germany">Germany</option>
 								</select>
-	
+
 								<label for="subject">Subject</label>
 								<textarea id="subject" name="subject" placeholder="Write something..."
 									style="height:20%"></textarea>
-	
+
 								<input type="submit" value="Submit">
-	
+
 							</form>
 						</div>
 					</section>
@@ -199,21 +201,23 @@
 
 
 	<!-- MABABOU -->
+
+
 	<div id="mababou_container" class="container">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
 			<span id="gotohome2" class="navbar-brand">HOME</span>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent2"
+				aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<div class="collapse navbar-collapse" id="navbarSupportedContent2">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item nav-item-space">
-						<a class="nav-link" data-offset="100" href="#mababou-about">About</a>
+						<a class="nav-link" href="#mababou-about">About</a>
 					</li>
 					<li class="nav-item nav-item-space">
-						<a class="nav-link" data-offset="100" href="#mababou-resume">Resume</a>
+						<a class="nav-link" href="#mababou-resume">Resume</a>
 					</li>
 					<li class="nav-item nav-item-space">
 						<a class="nav-link" href="#mababou-contact">Contact</a>
@@ -222,7 +226,6 @@
 			</div>
 		</nav>
 		<div id="mababou_content" class="mababou_content">
-			<div class="blank-nav"></div>
 			<!-- cv content -->
 			<a class="anchor" id="mababou-about"></a>
 			<div class="section about">
