--- a/rush/index.html
+++ b/rush/index.html
@@ -151,7 +151,7 @@
 					<section>
 						<h2>Via the form below</h2>
 						<div class="contact-container">
-							<form action="">
+							<form>
 
 								<label for="fname">First Name</label>
 								<input type="text" id="fname" name="firstname" placeholder="Your name">
@@ -170,7 +170,7 @@
 								<textarea id="subject" name="subject" placeholder="Write something..."
 									style="height:20%"></textarea>
 
-								<input type="submit" value="Submit">
+								<input class="submit-contact-mriant" type="submit" value="Submit">
 
 							</form>
 						</div>
@@ -178,16 +178,16 @@
 					<section>
 						<h2>Via social networks</h2>
 						<div class="network-container">
-							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+							<a target="_blank" href="https://www.youtube.com/watch?v=INscMGmhmX4">
 								<img class="network-logo" src="img/facebook.png">
 							</a>
-							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+							<a target="_blank" href="https://www.youtube.com/watch?v=INscMGmhmX4">
 								<img class="network-logo" src="img/messenger.png">
 							</a>
-							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+							<a target="_blank" href="https://www.youtube.com/watch?v=INscMGmhmX4">
 								<img class="network-logo" src="img/discord.png">
 							</a>
-							<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+							<a target="_blank" href="https://www.youtube.com/watch?v=INscMGmhmX4">
 								<img class="network-logo" src="img/linkedin.png">
 							</a>
 						</div>
@@ -335,7 +335,7 @@
 				<section>
 					<h2>Via the form below 👇</h2>
 					<div class="contact-container">
-						<form action="">
+						<form>
 
 							<label for="fname">First Name</label>
 							<input type="text" id="fname" name="firstname" placeholder="Your name">
@@ -362,16 +362,16 @@
 				<section>
 					<h2>Via social networks 🙋</h2>
 					<div class="network-container">
-						<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+						<a target="_blank" href="https://www.youtube.com/watch?v=INscMGmhmX4">
 							<img class="network-logo" src="img/facebook.png">
 						</a>
-						<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+						<a target="_blank" href="https://www.youtube.com/watch?v=INscMGmhmX4">
 							<img class="network-logo" src="img/messenger.png">
 						</a>
-						<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+						<a target="_blank" href="https://www.youtube.com/watch?v=INscMGmhmX4">
 							<img class="network-logo" src="img/discord.png">
 						</a>
-						<a href="https://www.youtube.com/watch?v=INscMGmhmX4">
+						<a target="_blank" href="https://www.youtube.com/watch?v=INscMGmhmX4">
 							<img class="network-logo" src="img/linkedin.png">
 						</a>
 					</div>
