--- a/rush/index.html
+++ b/rush/index.html
@@ -170,7 +170,7 @@
 								<textarea id="subject" name="subject" placeholder="Write something..."
 									style="height:20%"></textarea>
 
-								<input class="submit-contact-mriant" type="submit" value="Submit">
+								<input class="submit-contact-mriant" type="button" value="Submit">
 
 							</form>
 						</div>
@@ -205,7 +205,7 @@
 
 	<div id="mababou_container" class="container">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-			<span id="gotohome2" class="navbar-brand">HOME</span>
+			<a id="gotohome2" class="navbar-brand" href="#">HOME</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent2"
 				aria-controls="navbarSupportedContent2" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -335,7 +335,7 @@
 				<section>
 					<h2>Via the form below 👇</h2>
 					<div class="contact-container">
-						<form>
+						<form method="GET" action="#">
 
 							<label for="fname">First Name</label>
 							<input type="text" id="fname" name="firstname" placeholder="Your name">
@@ -354,7 +354,7 @@
 							<textarea id="subject" name="subject" placeholder="Write something..."
 								style="height:20%"></textarea>
 
-							<input type="submit" value="Submit">
+							<input type="button" value="Submit">
 
 						</form>
 					</div>
